src/test/deca/syntax/invalid/created/random_100_TOKENS.deca
RtEzCQWtqNxurM0plns9ZCJPn4hlN3Vpn 

	 th5$3DSrtR0OF2yv4Gbqbx JDzriXQYj$fvhNw8xVU1Sa9FY7s extends 21444.52900E-2536621996f * "¡Ò∫ÔS”j¿∞\\\\™"  - 3096172121 JQEpCSJz11XGonaYwVoTI1l2o2aaK83 52418.27485e+3191247811f return && || this / "" g_u4FX5DG3XX$DtDjVK16602sfEBtkIKG5gVtNa osARlW8ahac20rXFBjMUSO235kOhNA readInt 
m71R < 
4237416010 print 		new 	$ "|YÑô»L®1X
´é" ! "ÔCä>˝C{+ˇ…Ï¸‘a`ÓqØkßMî“[8ﬁÑJ«" SPXbgVK1teIZR$$eEbo3c520 1676.47655e-3901733459f class extends 
	"b|›©!4Yv«>B9ç" instanceof hnVDoG$6kP$7B_s2GM4UcuZPEhnJWa4qDMk7 	
} 25226.24709E+4272454843 null 4128997984  extends class 	"	\"¬Ä™îu§ÒÅ∞2Ñ‡ 	println 60576.58858f 7195.21905e-2059447092f = true 	"ÌÏ%ÏE" "|Ù2ùπ¥ÛãMPT˙Tß(˙√Å”íkâ" extends 13218.20736e+967626746f "ﬁ§&•i—πZıÀ·–m˙B…õ©ˆ5`îup∆" 

 46230.8178 59152.48646E+3942236041f if 
3346919755 . && null 	GM4jp3IMQc91hjzv7M6qgRufTQy8 fIFzoZa30eyNIqEE 5610.48914e-1305889399f != return 
"˘æ∂>kKÂÆ◊ïãYlK[êÓ" "P!±9πxﬁ)≤Q∞_"  1823991226 